--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "three": "^0.166.1",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
@@ -23,6 +24,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/three": "^0.166.0",
     "@typescript-eslint/eslint-plugin": "^7.16.1",
     "@typescript-eslint/parser": "^7.16.1",
     "eslint": "^8",
